tests/fixtures/errors/e0105_field_on_no_fields.mimz
// expect: E0105
module M {
  in x: bit
  out y: bit
  y = x.bit0
}
